Feature cluster api and functions
